# scalar

./: .gitignore  ATTRIBUTION.md  Cargo.toml  README.md
.cargo/: config.toml
assets/: miner.glb  node_copper.glb  node_iron.glb  processor.glb  rock_2.glb  satellite_dish.glb  stump.glb  terrain.glb  tree.glb
assets/models/: miner.glb  node_coal.glb  rock_0.glb  rock_1.glb  rock_2.glb  stump.glb
blender/: miner.blend  node.blend  player_marker.xcf  rock.blend  satellite_dish.blend  stump.blend  terrain.blend  tree.blend  world_mesh.blend
res/models/: miner.blend  processor.blend  tree.blend
src/: build_menu.rs  building_menu.rs  buildings.rs  chunks.rs  controls.rs  effects.rs  environment.rs  hud.rs  inventory.rs  main.rs  map.rs  map_menu.rs  pause_menu.rs  player.rs  research_menu.rs  terrain.rs  ui.rs  unlocks.rs  world.rs  worldgen.rs
src/menus/: build.rs  building.rs  map.rs  mod.rs  pause.rs  research.rs
