[package]
name = "scalar"
version = "0.1.0"
edition = "2024"

[dependencies]
bevy = { version = "0.18.1", features = ["bevy_dev_tools", "debug", "dynamic_linking", "file_watcher"] }
bevy_obj = "0.18.1"
avian3d = { version = "0.6", features = ["collider-from-mesh", "bevy_scene"] }
log = { version = "*", features = ["max_level_debug", "release_max_level_warn"] }
rand = "0.9.2"
bevy-tnua-avian3d = "0.11.1"
bevy-tnua = "0.31.0"
strum = "0.28"
strum_macros = "0.28"
bevy_framepace = "0.21.0"
fastrand = "2.4.1"
fastapprox = "0.3.1"
image = "0.25.10"
rayon = "1.12.0"

# Enable a small amount of optimization in the dev profile.
[profile.dev]
opt-level = 1
strip = false
debug = true

# Enable a large amount of optimization in the dev profile for dependencies.
[profile.dev.package."*"]
opt-level = 3
